--- a/resume/resume.html
+++ b/resume/resume.html
@@ -18,7 +18,7 @@
                </p>
             </div>
         </header>
-        <h2><tittle>Summary</tittle></h2>
+        <h2>Summary</h2>
                  <div class="summary">
             <p>
                 	Enthusiastic Instructional Assistant with superb leadership and communication skills. <br/>
@@ -35,7 +35,7 @@
                 </p>
                 </div>
 
-                <h3><tittle>Experience</tittle></h3>  
+                <h2>Experience</h2>  
                    <div class="Experience">
                      <p>
                    Child Development Assistant Clinical Professional<br/>
@@ -60,7 +60,7 @@
                      Developed excellent rapport with students and promoted excellent student engagemen<br/>
                      </p>
                    </div>
-                  <h4><tittle>Skills</tittle></h4>
+                  <h2>Skills</h2>
                     
                         	<div class=" Skills">
                               <p>  
@@ -73,10 +73,10 @@
                                     Critical thinker<br/>                                   
                                 </p>                    
                     </div>
-                     <h5><tittle>Education and Training</tittle></h5>
+                     <h2>Education and Training</h2>
                     <p>Azad University Central Tehran Branch － Tehran, Tehran Province, Iran Master of Arts psychology & Exceptional Children Education </p>
                     
-                     <h6><tittle>contact;</tittle></h6>
+                     <h2>contact</h2>
                      <div class="contact">
                          <p>
                           Professor Jason Anderton<br/>
