--- a/day1/day1.html
+++ b/day1/day1.html
@@ -10,21 +10,18 @@
 <body>
     <header><img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
     <nav>
-        <a>
-     "Resume" 
-        </a>
-        <a>
-        "About Me"    
-        </a>
-        <a>
-      "My Blog"   
-        </a>
+        <a> Resume</a>
+       <a>About me</a>
+        <a>My Blog</a>
          <a class="has-border">Contact Me</a>
     </nav>
     </header>
     <main>
-            <img src="./myProfilePic.jpg" id="profile-pic" alt="Headshot of Me">
+        <img src="profile-pic/myProfilePic.jpg.jpg" id="profile-pic" alt="Headshot of Me"> 
+             <h1>Fariba Salehi</h1>
+            <h2>Student of Web Development.</h2>
+            <button id="portfolio">Portfolio</button>
     </main>
-    hello
+  
 </body>
 </html>
