--- a/checkPoint-1/mobile/index.html
+++ b/checkPoint-1/mobile/index.html
@@ -15,18 +15,18 @@
    <body>
         <div class="grid-container">
     <!--showcase-->
-      <header id="showcase" class="grid-container">
-         <div class="content_wrap">
-             <h1 class="content-wrap"> Safe and Friendly Mobile</h1>
-             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere quam illum, quae sapiente eveniet, aut harum totam magnam rerum officiis exercitationem. Omnis maiores corporis sint similique molestias numquam ducimus odio!
-             </p>
-         <a href="#section-b" class="btn">Read More</a>    
-    </div>
-  </header>
+    <header id="showcase" class="grid-container">
+        <div class="content_wrap">
+            <h1 class="content-wrap"> Safe and Friendly Mobile</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere quam illum, quae sapiente eveniet, aut harum totam magnam rerum officiis exercitationem. Omnis maiores corporis sint similique molestias numquam ducimus odio!
+            </p>
+        <a href="#section-b" class="btn">Read More</a>    
+   </div>
+ </header>
  <!--Main Area -->
  <main id="main">
     <!--section-a-->
-  <section id="section-a" class="grid-container">
+  <section- id="section-a" class="grid-container">
          <div class="content-wrap">
              <h2 class="content-title"> Rules for Online Safety</h2>
              <div class="content-text">
@@ -36,7 +36,7 @@
      </section>
 
       <!--section b-->
-       <section id="section b" class="grid-card">
+       <section id="section-b" class="grid-card">
            <ul>
                <li>
                    <div class="card-content">
