--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -11,8 +11,8 @@
 <body>
    <div class="grid-container">
 
-      <!--SECTION header-->
-      <header class="grid-container" background-color="gray">
+  
+     <header class="grid-container" background-color="gray">
          <div class="box">
           <nav>
               <ul>
@@ -35,7 +35,7 @@
                   
                 <iframe src="http://free.timeanddate.com/clock/i6m1vkk6/n24/fs15/tt0/tw0/tm1/ts1/tb4" frameborder="0" width="93" height="36"></iframe>
           </div> 
-      </header>  
+      </header> --> 
 
 <!--section greeting--> 
     
