--- a/html/NASA/src/index.html
+++ b/html/NASA/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="./src/blog.html>
+<link rel="stylesheet" href="./styles/src/blog.html>
 html lang="en></a>
 <head>
     <meta charset="UTF-8">
