--- a/html/dashboard/index.html
+++ b/html/dashboard/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" media="(max-width: 800px)" href="my800wide-style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet"  herf="backgrond_styles.css">
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="./styles/style.css">
    <title>Dashboard</title>
 </head>
 <body>
