--- a/my blog/my blog/index.html
+++ b/my blog/my blog/index.html
@@ -1,12 +1,13 @@
+
 <!DOCTYPE html>
-<link rel="stylesheet" href="./styles/src/blog.html>
+<link rel="stylesheet" href="./src/blog.html>
 html lang="en></a>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>"life & live"</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet"type="text/css" href="../styles/style.blog.css">
 </head>
 <body>
        
@@ -71,8 +72,4 @@ html lang="en></a>
         <br><br>
         <footer>faribasalehi@hotmail.com</footer>
 </html>
-
-
-
-
 
