--- a/NASA/NASA/index .html
+++ b/NASA/NASA/index .html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>NASA</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../style/style.nasa.css">
 </head>
 <body>
  <div class="flex">
@@ -14,7 +14,7 @@
     <main>
     <section-a id="section-a" >
      <h>NASA</h>
-     <img src="3space.jpg" width="850px" height="450px" alt="blast off">
+     <img src="../image/3space.jpg" width="850px" height="450px" alt="blast off">
     
 </section-a>  
 </main>
