--- a/mobile/mobile/index.html
+++ b/mobile/mobile/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet"  herf="backgrond_styles.css">
   <link rel="stylesheet" href="style.css">
   <meta htt-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="../styles/style.mobile.css">
   <title>Mobile</title>
 </head>
    <body>
