--- a/my portfolio/myPortfolio/day1.html
+++ b/my portfolio/myPortfolio/day1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../styles/style.pro.css">
 </head>
 <body>
     <header><img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
@@ -17,7 +17,7 @@
     </nav>
     </header>
     <main>
-        <img src="profile-pic/myProfilePic.jpg.jpg" id="profile-pic" alt="Headshot of Me"> 
+        <img src="../profile-pic/myProfilePic.jpg" id="profile-pic" alt="Headshot of Me"> 
              <h1>Fariba Salehi</h1>
             <h2>Student of Web Development.</h2>
             <button id="portfolio">Portfolio</button>
