--- a/landingpage-Animated/html/Animated.html
+++ b/landingpage-Animated/html/Animated.html
@@ -12,7 +12,7 @@
    <header> 
      <!--section-header-->
     <div class="header" >
-       <div class= "navigation">
+       <div class= "navigation animated tada">
             <a  href="../../Resume/resume/resume.html" id="About me">
                 About me
             </a>
@@ -31,7 +31,7 @@
             <a href="#Parenting">
                 Parenting
             </a>
-            <!-- <img  src="../profile-pic/banner.jpg" width="100%" height="auto" class="banner" alt="save date"> -->
+             <img  src="../images/ch.jpg" id="img" width="10%" height="4%" class="animated bounceInLeft " alt="a car">
         </div>
     </div>
 </header>
@@ -41,7 +41,7 @@
     <div id="flex" class="main">
         <div class="section-header-a" >
             <img src="../images/myProfilePic.jpg" id="profile-pic" alt="Headshot of Me"> 
-            <strong>
+            <strong  class="animated rubberBand">
                 Hi! I am Fariba Salehi
               </strong>
               <link href="https://fonts.googleapis.com/css?family=Felipa|Handlee" rel="stylesheet">
