--- a/about-page/html/a-b.html
+++ b/about-page/html/a-b.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-  <link rel="stylesheet" type="text/css" href="../styles/Animated.css" media="screen" />
-  <title>landingpage-Animated</title>
+  <link rel="stylesheet" type="text/css" href="../styles/a-b.css" media="screen" />
+  <title>about-page</title>
 </head>
 <body>
    <header> 
