--- a/dashboard/dashboard/index.html
+++ b/dashboard/dashboard/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
+</html>
+
+<!--<!DOCTYPE html>
+<head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet"  herf="backgrond_styles.css">
    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
