--- a/Repl.it-Funcs/repl.html
+++ b/Repl.it-Funcs/repl.html
@@ -10,12 +10,13 @@
     
  <script>
    // Print out each word
-   const word= ['waffle', 'whimper', 'sneeze', 'shindig', 'leopard', 'whisper', 'elegant']
+  const word= ['waffle', 'whimper', 'sneeze', 'shindig', 'leopard', 'whisper', 'elegant']
 
 const printOutWord = (word) => {
   word[1]="elegant";
   document.write("whisper"  +  " "  +"waffle"  +  " "  + "elegant" + " " + " leapard" + " " + " shinding" + " sneez"+ " " + "whimper");
 }
+
 
 printOutWord(word) // =>
 'waffle'
@@ -92,17 +93,20 @@ sumSquared(myArr) // => 136
 document.write("<hr/>") 
 
 //If it starts with a "W"
-const wordArr = ['waffle', 'whimper', 'sneeze', 'shindig', 'leopard', 'whisper', 'elegant', 'wolf', 'weasel']
+/*const wordArr = ['waffle', 'whimper', 'sneeze', 'shindig', 'leopard', 'whisper', 'elegant', 'wolf', 'weasel']
 var w = ["waffle","whimper","wolf", "weasel", "whisper"];
 var n =['sneeze', 'shindig', 'leopard',];
 if(w){
   document.write(w);
 } else if(n) {
 document.removeEventListener;
-}
-  //const printOnlyWWords = (arr) => {
-  // your code here
-//}
+}*/
+/* var words = ['waffle', 'whimper', 'sneeze', 'shindig', 'leopard', 'whisper', 'elegant', 'wolf', 'weasel'];
+ var text = " ";
+ var i;
+ for (i = 0; i = wordStartsWithW; i++){
+   return(i);
+ }*/
 
 
 printOnlyWWords(wordArr) // =>
