--- a/intro-to-JS/mkdir/practice.html
+++ b/intro-to-JS/mkdir/practice.html
@@ -135,6 +135,19 @@
         document.write(myVarOne + " " + myVarThree + " " + myVarTwo)
 
         document.write("<hr/>")
+
+        const myArr = [9, 10, 8, 5, 6, 7, 3]
+
+//sumOfArray(myArr) => 48
+
+var myArr= [9, 10, 8, 5, 6, 7, 3]
+function sumOfArray(){
+  var total="";
+  for(i=0; i< myArr.length; i++){
+    total+=myArr[i];
+  }
+  return total;
+}
         
         </script>
   </body>
