--- a/calulatar/calculater/index.html
+++ b/calulatar/calculater/index.html
@@ -8,7 +8,7 @@
     <title>Calculator</title>
 </head>
 <body>
-  <!--SECTION calculator-->
+ <!-- SECTION calculator
   <h1>calculator </h1>
   <div id="calculator" class="flexBox-Container">
 
@@ -38,9 +38,46 @@
         <button type="button" class="all-clear" value="all-clear">AC</button>
     
         <button type="button" class="equal-sign" value="=">=</button>
+   </div>-->
+
+   <div id="calc">
+    <input type="text" id="results">
+    <table>
+      <tr>
+        <td class="button" onclick="addNumber('1')">1</td>
+        <td class="button" onclick="addNumber('2')">2</td>
+        <td class="button" onclick="addNumber('3')">3</td>
+        <td class="button" onclick="addition()">+</td>
+      </tr>
+      <tr>
+        <td class="button" onclick="addNumber('4')">4</td>
+        <td class="button" onclick="addNumber('5')">5</td>
+        <td class="button" onclick="addNumber('6')">6</td>
+        <td class="button" onclick="subtraction()">
+          -
+        </td>
+      </tr>
+      <tr>
+        <td class="button" onclick="addNumber('7')">7</td>
+        <td class="button" onclick="addNumber('8')">8</td>
+        <td class="button" onclick="addNumber('9')">9</td>
+        <td class="button" onclick="multiplication()">*</td>
+      </tr>
+      <tr>
+        <td class="button" onclick="negativePositive()">+/-</td>
+        <td class="button" onclick="addNumber('0')">0</td>
+        <td class="button" onclick="equals()">=</td>
+        <td class="button"onclick="division()">
+        /
+        </td>
+      </tr>
+      <tr>
+        <td class="button" colspan="2" onclick="deleteLast()">Delete</td>
+        <td class="button" colspan="2" onclick="clearResults()">Clear</td>
+      </tr>
+    </table>
    </div>
+    <script type="text/javascript" src="../SCRIPT/calc.js"></script>
   </body>
 </html>      
 
-</body>
-</html>>
